--- a/tailwind/src/form.html
+++ b/tailwind/src/form.html
@@ -12,14 +12,12 @@
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
       }
-
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
         color: #384047;
       }
-
       form {
         max-width: 90%;
         margin: 10px auto;
@@ -28,12 +26,10 @@
         border-radius: 8px;
         margin-top: 20vh;
       }
-
       h1 {
         margin: 0 0 30px 0;
         text-align: center;
       }
-
       input[type="password"] {
         background: rgba(255, 255, 255, 0.1);
         border: none;
@@ -48,7 +44,6 @@
         box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
         margin-bottom: 30px;
       }
-
       button {
         padding: 0.7rem 1rem;
         color: #fff;
@@ -63,60 +58,49 @@
         box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
         margin-bottom: 10px;
       }
-
       fieldset {
         margin-bottom: 30px;
         border: none;
       }
-
       legend {
         font-size: 1.4em;
         margin-bottom: 10px;
       }
-
       label {
         display: block;
         margin-bottom: 8px;
       }
-
       label.light {
         font-weight: 300;
         display: inline;
       }
-
       @media screen and (min-width: 480px) {
         form {
           max-width: 480px;
         }
       }
-
       @media (prefers-color-scheme: dark) {
         body {
           background-color: black;
           color: white;
         }
-
         form {
           background-color: #384047;
         }
-
         input[type="password"] {
-          background-color: #4c535a;
-          /* background: #3ac162; */
+          background-color: #4c535a; /* background: #3ac162; */
         }
       }
     </style>
   </head>
-
   <body>
     <div>
       <div>
-        <form action="/dQw4w9WgXcQ/auth" method="post">
+        <form action="/" method="post">
           <h1>Authorize</h1>
-
           <fieldset>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" />
+            <input autofocus type="password" id="password" name="password" />
             <button type="submit">Go</button>
           </fieldset>
         </form>
