added ?cli=pass, cli client, some styling twaks

--- a/tailwind/src/index.html
+++ b/tailwind/src/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{.Dirtitle}}</title>
 
-    <!-- <a target="_blank" href="https://icons8.com/icon/88576/document">File</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     <link rel="stylesheet" href="/?res=css" />
     <link rel="icon" href="/?res=favicon" />
   </head>
@@ -42,7 +41,7 @@
             not
             .IsDir}}download="{{.Name}}"
             {{end}}
-            class="files flex gap-6 items-center px-2 py-1 md:py-2 mb-3 bg--100 bg-gray-100 dark:bg-gray-900/90 shadow-lg dark:hover:bg-gray-800 dark:shadow-gray-700/40 md:shadow-none md:hover:shadow-lg duration-300 md:hover:ease-in-out"
+            class="files flex gap-6 items-center px-2 py-3 md:py-2 mb-3 bg--100 bg-gray-100 dark:bg-gray-900/90 shadow-lg dark:hover:bg-gray-800  md:shadow-none md:hover:shadow-lg duration-300 md:hover:ease-in-out"
           >
             <div class="ml-1 w-8/12 flex items-center gap-2">
               <span>{{ .Icon }}</span>
