a bit of styling done

--- a/tailwind/src/index.html
+++ b/tailwind/src/index.html
@@ -6,7 +6,7 @@
 <body class="dark relative">
   <div class="dark:bg-black dark:text-gray-50 ease-in duration-300 min-h-screen">
     <!-- container -->
-    <div class="w-[95%] md:w-3/4 mx-auto pb-16 pt-4">
+    <div class="md:w-3/4 mx-auto pb-16 pt-4">
       <!-- navigation -->
       {{ template "index-searh-possible-paths" .}}
 
