--- a/tailwind/src/index.html
+++ b/tailwind/src/index.html
@@ -19,7 +19,7 @@
       {{ template "index-nav" }}
     </div>
   </div>
-  <div class="fixed left-4 bottom-4 bg-red-200" id="zip-progress"></div>
+  {{template "index-zip"}}
 
   <script>// {{ template "index-js"}}</script>
 </body>
