--- a/tailwind/src/index/list.html
+++ b/tailwind/src/index/list.html
@@ -63,9 +63,13 @@
             </td>
         </tr>
         {{else}}
-        <div class="text-center font-bold w-full h-screen flex justify-center mt-[30vh] text-2xl">
-            <span>No files</span>
-        </div>
+        <tr>
+            <td>
+                <div class="w-full">
+                    <span>No files</span>
+                </div>
+            </td>
+        </tr>
         {{end}}
 
     </table>
