--- a/tailwind/src/index/list.html
+++ b/tailwind/src/index/list.html
@@ -1,5 +1,5 @@
 {{ define "index-dir"}}
-<div class="my-8 mx-auto text-xl">
+<div class="my-8 mx-auto md:text-xl">
     <table class="mx-auto w-[95%]">
         <tr class="text-left border-b border-emerald-600 dark:border-emerald-300">
             <th>
