--- a/tailwind/src/index/components.html
+++ b/tailwind/src/index/components.html
@@ -12,7 +12,7 @@
 
 {{ define "index-searh-possible-paths"}}
 <input type="text" id="search"
-  class="border dark:border-gray-700 bg-inherit rounded-full px-4 py-1 mx-auto block text-xl w-[60%] my-4"
+  class="border dark:border-gray-700 bg-inherit rounded-full px-4 py-1 mx-auto block text-xl w-[70%] md:w-[60%] my-4"
   placeholder="Search" />
 <div
   class="w-[95%] mx-auto flex noscrollbar items-center py-2 px-2 mb-4 overflow-x-scroll scroll-smooth text-ellipsis whitespace-nowrap">
