--- a/tailwind/src/index/list.html
+++ b/tailwind/src/index/list.html
@@ -1,7 +1,7 @@
 {{ define "index-dir"}}
-<div class="my-8 mx-auto md:text-xl">
+<div class="my-8 mx-auto">
     <table class="mx-auto w-[95%]">
-        <tr class="text-left border-b border-emerald-600 dark:border-emerald-300">
+        <tr class="text-left border-b border-emerald-600/40 dark:border-emerald-300/40">
             <th>
                 <div class="w-56 md:w-full md:ml-2">
                     File names
@@ -13,7 +13,7 @@
             <th class="w-14">Down</th>
         </tr>
         {{range .Directories }}
-        <tr class="file-name-rows border-b border-emerald-600 dark:border-emerald-300">
+        <tr class="file-name-rows border-b border-emerald-600/40 dark:border-emerald-300/40">
             <!-- <div class="files flex gap-6 items-center px-2 py-3 md:py-2 mb-3 bg--100 bg-gray-100 dark:bg-gray-900/90 shadow-lg dark:hover:bg-gray-800 md:shadow-none md:hover:shadow-lg duration-300 md:hover:ease-in-out"> -->
             <td>
                 <!-- main is width 90% for mobile -->
