--- a/tailwind/src/index.html
+++ b/tailwind/src/index.html
@@ -16,10 +16,10 @@
       {{template "index-dir" .}}
 
       <!-- navigation -->
-      {{ template "index-nav" }}
+      {{ template "index-nav" . }}
     </div>
   </div>
-  {{template "index-zip"}}
+  {{template "index-zip" }}
 
   <script>// {{ template "index-js"}}</script>
 </body>
