--- a/tailwind/src/index.html
+++ b/tailwind/src/index.html
@@ -8,7 +8,8 @@
     <!-- container -->
     <div class="md:w-3/4 mx-auto pb-16 pt-4">
       <!-- navigation -->
-      {{ template "index-searh-possible-paths" .}}
+      {{ template "index-searh"}}
+      {{ template "index-possible-paths" .}}
 
 
       {{ template "index-sort" .SortOptions}}
