--- a/tailwind/src/index/list.html
+++ b/tailwind/src/index/list.html
@@ -1,6 +1,6 @@
 {{ define "index-dir"}}
 <div class="my-8 mx-auto">
-    <table class="mx-auto w-[95%]">
+    <table class="mx-auto w-[95%] md:w-[60%]">
         <tr class="text-left border-b border-emerald-600/40 dark:border-emerald-300/40">
             <th>
                 <div class="w-56 md:w-full md:ml-2">
@@ -17,9 +17,9 @@
             <!-- <div class="files flex gap-6 items-center px-2 py-3 md:py-2 mb-3 bg--100 bg-gray-100 dark:bg-gray-900/90 shadow-lg dark:hover:bg-gray-800 md:shadow-none md:hover:shadow-lg duration-300 md:hover:ease-in-out"> -->
             <td>
                 <!-- main is width 90% for mobile -->
-                <div class="w-56 md:w-full md:mr-4">
+                <div class="w-56 md:w-96 md:mr-4">
                     <a class="file-names block w-full whitespace-nowrap overflow-hidden text-ellipsis hover:underline px-2 py-4"
-                        href="{{.Url}}{{$.Queries}}" {{if not .IsDir}}download="{{.Name}}" {{end}}>
+                        href="{{.Url}}{{$.Queries}}" {{if not .IsDir}}download="{{.Name}}" {{end}} title="{{.Name}}">
                         <!-- <span class="block w-[50%] name whitespace-nowrap overflow-hidden text-ellipsis"> -->
                         {{.Name}}
                         <!-- </span> -->
@@ -28,15 +28,15 @@
             </td>
             <td>
                 <!-- <div class="w-2/5 flex items-center justify-end"> -->
-                <div class="w-[4.2rem]">
+                <div class="w-[4.2rem]" title="file size">
                     {{if .IsDir}}--{{else}}{{.Size}}{{end}}
                 </div>
             </td>
             <td class="flex justify-center px-0 py-4">
                 {{if .IsDir}}
                 <!-- onclick="getZipFile(this)" -->
-                <div data-link="{{.Url}}?zip=make"
-                    class="group relative w-9 h-9 mx-auto p-1 zip-file hover:fill-amber-500 fill-amber-600 dark:fill-amber-400 dark:hover:fill-amber-600  cursor-pointer">
+                <div data-link="{{.Url}}?zip=make" title="Download as zipe file"
+                    class="w-9 h-9 mx-auto p-1 zip-file hover:fill-amber-500 fill-amber-600 dark:fill-amber-400 dark:hover:fill-amber-600  cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         viewBox="0 0 16 16" class="w-full h-full fill-inherit">
                         <path
@@ -44,16 +44,13 @@
                         <path
                             d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-4-.5V2h-1V1H6v1h1v1H6v1h1v1H6v1h1v1H5.5V6h-1V5h1V4h-1V3h1zm0 4.5h1a1 1 0 0 1 1 1v.938l.4 1.599a1 1 0 0 1-.416 1.074l-.93.62a1 1 0 0 1-1.109 0l-.93-.62a1 1 0 0 1-.415-1.074l.4-1.599V8.5a1 1 0 0 1 1-1z" />
                     </svg>
-                    <span
-                        class="hidden absolute group-hover:block bg-black text-white text-sm whitespace-nowrap right-10 bottom-0 p-1">Download
-                        as zip</span>
                 </div>
 
                 {{else}}
 
-                <a href="{{.Url}}{{$.Queries}}" download="{{.Name}}" class="block w-9 h-9 mx-auto p-1"> <svg
-                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        viewBox="0 0 16 16"
+                <a href="{{.Url}}{{$.Queries}}" download="{{.Name}}" class="block w-9 h-9 mx-auto p-1"
+                    title="Download file"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        fill="currentColor" viewBox="0 0 16 16"
                         class="w-full h-full fill-sky-600 dark:fill-sky-300 dark:hover:fill-sky-600 hover:fill-sky-400">
                         <path
                             d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z" />
