--- a/tailwind/src/index/components.html
+++ b/tailwind/src/index/components.html
@@ -50,6 +50,16 @@
   <div id="menu-items"
     class="hidden bg-gray-50/40 dark:bg-gray-900/30 px-2 py-2 rounded border border-slate-100 dark:border-slate-600 shadow-2xl">
     <div class="flex gap-2 flex-col items-center justify-center fill-inherit">
+      <!-- upload -->
+      <a class="w-8 h-8" style="display: block;" href="/?upload=form">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+          class="w-full h-full fill-inherit" viewBox="0 0 16 16">
+          <path
+            d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 5.146a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2z" />
+        </svg>
+      </a>
+
+      <!-- theme tgl -->
       <button id="theme-btn" class="w-8 h-8"></button>
       <button id="menu-cancel" class="w-8 h-8">
         <svg class="w-full h-full fill-inherit" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
