--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>- Dir name -</title>
+    <!-- <title>- Dir name -</title> -->
+    <title>{{.Cd}}</title>
 </head>
 
 <body>
