frontend upload statuses

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,10 +18,18 @@
     <div>
         <h1>Upload files</h1>
         <input type="file" id="fileInput" multiple>
-        <input id="fileCheckSum" type="checkbox" />
+
+        <br>
+        <label for="fileCheckSum">Validate:</label>
+        <input name="fileCheckSum" id="fileCheckSum" type="checkbox" />
+
+        <br>
         <button id="fileSubmit">Upload</button>
-        <div id="progress">send: --</div>
+        <br>
         <div id="progress-send">send: --</div>
+        <div id="progress">current: --</div>
+
+        <br><br>
     </div>
 
     <div>
